tests/baselines/reference/AmbientModuleAndAmbientFunctionWithTheSameNameAndCommonRoot.errors.txt
module.d.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== module.d.ts (1 errors) ====
    declare module Point {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var Origin: { x: number; y: number; }
    }
    
==== function.d.ts (0 errors) ====
    declare function Point(): { x: number; y: number; }
    
==== test.ts (0 errors) ====
    var cl: { x: number; y: number; }
    var cl = Point();
    var cl = Point.Origin;